<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/registration"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />




        <TextView
            android:id="@+id/phone_number_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_85sdp"
            android:text="@string/your_telephone_number"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/edit_text_background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_verification_stage"
            android:layout_gravity="center"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</ScrollView>