<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="@color/background"
    android:scrollbars="none"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_gravity ="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/verification"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/verification_code_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/we_ve_send_the_verification_code_to_your_instagram"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_registration_last_stage"
            android:layout_gravity="center"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/check_the_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</ScrollView>